# app/Http/Controllers/UsersController.php
@@ -5,93 +5,110 @@ namespace App\Http\Controllers;
 use Illuminate\Http\Request;
 use App\Models\User;
 use App\Http\Resources\UsersCollection;
+use Auth;
 class UsersController extends Controller
 {
-
    /**
-    * @OA\Get(
-    *   path="/users",
-    *   summary="Lists available Users",
-    *   description="Gets all available Users resources",
-    *   tags={"Users"},
-    *   security={{"passport": {"*"}}},
-    *   @OA\Parameter(
-    *       name="paginate",
-    *       in="query",
-    *       description="paginate",
-    *       required=false,
-    *       @OA\Schema(
-    *           title="Paginate",
-    *           example="true",
-    *           type="boolean",
-    *           description="The unique identifier of a Post resource"
-    *       )
-    *   ),
-    *   @OA\Parameter(
-    *       name="dataSearch",
-    *       in="query",
-    *       description="Post resource name",
-    *       required=false,
-    *       @OA\Schema(
-    *           type="string",
-    *           description="The unique identifier of a Post resource"
-    *       )
-    *    ),
-    *   @OA\Parameter(
-    *       name="sortField",
-    *       in="query",
-    *       description="Sort field",
-    *       required=false,
-    *       @OA\Schema(
-    *           title="name",
-    *           type="string",
-    *           example="name",
-    *           description="The unique identifier of a Post resource"
-    *       )
-    *    ),
-    *   @OA\Parameter(
-    *       name="sortOrder",
-    *       in="query",
-    *       description="Sort order field",
-    *       @OA\Schema(
-    *           title="sortOrder",
-    *           example="asc",
-    *           type="string",
-    *           description="The unique identifier of a Post resource"
-    *       )
-    *    ),
-    *   @OA\Parameter(
-    *       name="perPage",
-    *       in="query",
-    *       description="Sort order field",
-    *       @OA\Schema(
-    *           title="perPage",
-    *           type="number",
-    *           default="0",
-    *           description="The unique identifier of a Post resource"
-    *       )
-    *    ),
-    *   @OA\Response(
-    *       @OA\MediaType(mediaType="application/json"),
-    *       response=200,
-    *       description="A list with Users",
-    *   ),
-    *   @OA\Response(
-    *       @OA\MediaType(mediaType="application/json"),
-    *       response=401,
-    *       description="Unauthenticated."
-    *   ),
-    *   @OA\Response(
-    *       @OA\MediaType(mediaType="application/json"),
-    *       response="default",
-    *       description="an ""unexpected"" error"
-    *   ),
-    * )
-    *
-    * Display a listing of the resource.
-    *
-    * @return \Illuminate\Http\Response
-  */
+        * @OA\Get(
+        *   path="/users",
+        *   summary="Lists available Users",
+        *   description="Gets all available Users resources",
+        *   tags={"Users"},
+        *   security={{"passport": {"*"}}},
+        *   @OA\Parameter(
+        *       name="paginate",
+        *       in="query",
+        *       description="paginate",
+        *       required=false,
+        *       @OA\Schema(
+        *           title="Paginate",
+        *           example="true",
+        *           type="boolean",
+        *           description="The unique identifier of a Post resource"
+        *       )
+        *   ),
+        *   @OA\Parameter(
+        *       name="dataSearch",
+        *       in="query",
+        *       description="Post resource name",
+        *       required=false,
+        *       @OA\Schema(
+        *           type="string",
+        *           description="The unique identifier of a Post resource"
+        *       )
+        *    ),
+        *   @OA\Parameter(
+        *       name="sortField",
+        *       in="query",
+        *       description="Sort field",
+        *       required=false,
+        *       @OA\Schema(
+        *           title="name",
+        *           type="string",
+        *           example="name",
+        *           description="The unique identifier of a Post resource"
+        *       )
+        *    ),
+        *   @OA\Parameter(
+        *       name="sortOrder",
+        *       in="query",
+        *       description="Sort order field",
+        *       @OA\Schema(
+        *           title="sortOrder",
+        *           example="asc",
+        *           type="string",
+        *           description="The unique identifier of a Post resource"
+        *       )
+        *    ),
+        *   @OA\Parameter(
+        *       name="perPage",
+        *       in="query",
+        *       description="Sort order field",
+        *       @OA\Schema(
+        *           title="perPage",
+        *           type="number",
+        *           default="0",
+        *           description="The unique identifier of a Users resource"
+        *       )
+        *    ),
+        * @OA\Parameter(
+        *     name="authorization",
+        *     in="header",
+        *     description="authorization",
+        *     @OA\Schema(
+        *         title="authorization",
+        *         type="string",
+        *     )
+        * ),
+        *   @OA\Response(
+        *       @OA\MediaType(mediaType="application/json"),
+        *       response=200,
+        *       description="A list with Users",
+        *       @OA\Header(
+        *       header="X-Auth-Token",
+        *       @OA\Schema(
+        *           type="integer",
+        *           format="int32"
+        *       ),
+        *       description="calls per hour allowed by the user"
+        *     ),
+        *   ),
+        *   @OA\Response(
+        *       @OA\MediaType(mediaType="application/json"),
+        *       response=401,
+        *       description="Unauthenticated."
+        *   ),
+        *   @OA\Response(
+        *       @OA\MediaType(mediaType="application/json"),
+        *       response="default",
+        *       description="an ""unexpected"" error"
+        *   ),
+        * )
+        *
+        * Display a listing of the resource.
+        *
+        * @return \Illuminate\Http\Response
+      */
     public function index(Request $request) {
 
         $q = User::select();
