# routes/web.php
@@ -9,9 +9,13 @@
 | and give it the Closure to call when that URI is requested.
 |
 */
-
 $router->get('/', function () use ($router) {
     return redirect('api/swagger-demo');
 });
 
-Route::get('condominiums/users', 'UsersController@index');
+$router->group(['', ''], function () use ($router) {
+	$router->group(['prefix' => 'condominiums/'], function ($router) {
+		Route::get('users/', 'UsersController@index');
+		Route::post('authenticate/', 'AuthenticateController@authenticate');
+	});
+});
