# storage/api-docs/api-docs.json
@@ -10,23 +10,23 @@
     },
     "servers": [
         {
-            "url": "https://swagger-demo-style.herokuapp.com/condominiums"
+            "url": "http://localhost:8000/condominiums"
         }
     ],
     "paths": {
-        "/login": {
+        "/authenticate": {
             "post": {
                 "tags": [
                     "Users"
                 ],
-                "summary": "Login",
-                "description": "Login Users",
-                "operationId": "App\\Http\\Controllers\\LoginController::login",
+                "summary": "Authenticate",
+                "description": "Authenticate Users",
+                "operationId": "App\\Http\\Controllers\\AuthenticateController::authenticate",
                 "requestBody": {
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/Users"
+                                "$ref": "#/components/schemas/Login"
                             }
                         }
                     }
@@ -120,15 +120,33 @@
                         "description": "Sort order field",
                         "schema": {
                             "title": "perPage",
-                            "description": "The unique identifier of a Post resource",
+                            "description": "The unique identifier of a Users resource",
                             "type": "number",
                             "default": "0"
+                        }
+                    },
+                    {
+                        "name": "authorization",
+                        "in": "header",
+                        "description": "authorization",
+                        "schema": {
+                            "title": "authorization",
+                            "type": "string"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "A list with Users",
+                        "headers": {
+                            "X-Auth-Token": {
+                                "description": "calls per hour allowed by the user",
+                                "schema": {
+                                    "type": "integer",
+                                    "format": "int32"
+                                }
+                            }
+                        },
                         "content": {
                             "application/json": {}
                         }
@@ -158,10 +176,10 @@
     },
     "components": {
         "schemas": {
-            "Users": {
+            "Login": {
                 "properties": {
                     "email": {
-                        "description": "The Post's email",
+                        "description": "The Users email",
                         "required": [
                             "true"
                         ],
@@ -169,6 +187,53 @@
                     },
                     "password": {
                         "description": "The email password",
+                        "required": [
+                            "true"
+                        ],
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "User": {
+                "properties": {
+                    "lastname": {
+                        "description": "The user lastname",
+                        "required": [
+                            "true"
+                        ],
+                        "type": "string"
+                    },
+                    "ci": {
+                        "description": "The user ci",
+                        "required": [
+                            "true"
+                        ],
+                        "type": "string"
+                    },
+                    "email": {
+                        "description": "The Users email",
+                        "required": [
+                            "true"
+                        ],
+                        "type": "string"
+                    },
+                    "tlf": {
+                        "description": "The Users tlf",
+                        "required": [
+                            "true"
+                        ],
+                        "type": "string"
+                    },
+                    "state": {
+                        "description": "The Users state",
+                        "required": [
+                            "true"
+                        ],
+                        "type": "string"
+                    },
+                    "password": {
+                        "description": "The Users password",
                         "required": [
                             "true"
                         ],
